# nino

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  compile.sh  format.sh  install.sh  nino.c
.github/workflows/: build.yml  release.yml
docs/: configs.md  controls.md  example.ninorc  syntax.md
resources/: README.md  bundler.c
resources/syntax/: c.json  cpp.json  java.json  python.json
resources/themes/: dark.nino  light.nino  solarized.nino
scripts/: build.sh  format.sh
src/: action.c  action.h  arena.c  arena.h  buildnum.c  buildnum.h  common.h  config.c  config.h  defines.h  editor.c  editor.h  file_io.c  file_io.h  file_type.c  file_types.c  file_types.h  find.c  find.h  goto_line.c  goto_line.h  highlight.c  highlight.h  input.c  input.h  json.c  json.h  nino.c  opt.h  os.h  os_unix.c  os_unix.h  os_win32.c  os_win32.h  output.c  output.h  prompt.c  prompt.h  row.c  row.h  (+11 more)
src/ui/: compositor.c  compositor.h  layout.c  layout.h  panel.h  rect.h  surface.c  surface.h
syntax/: c.json  json.json  kuroko.json  make.json  nino.json  python.json  rust.json  srctas.json  zig.json
themes/: dark.nino  light.nino  monokai.nino  ms-dos.nino  solarized.nino
